# phira-mp

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README.zh-CN.md  rust-toolchain.toml
.cargo/: config
.github/workflows/: CI.yaml  build.yml  ci.yml  docker-publish.yml  freebsd.yml  release.yml
phira-mp-client/: Cargo.toml
phira-mp-client/src/: lib.rs
phira-mp-common/: Cargo.toml
phira-mp-common/src/: bin.rs  command.rs  lib.rs
phira-mp-macros/: Cargo.toml
phira-mp-macros/src/: lib.rs
phira-mp-server/: Cargo.toml
phira-mp-server/locales/: en-US.ftl  zh-CN.ftl  zh-TW.ftl
phira-mp-server/src/: l10n.rs  main.rs  room.rs  server.rs  session.rs
