[workspace.package]
license-file = "LICENSE"

[workspace]
members = [
    "phira-mp-common",
    "phira-mp-client",
    "phira-mp-macros",
    "phira-mp-server",
]
resolver = "2"
rust-version = "1.91"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
lto = true

[profile.dev.package."*"]
opt-level = 2
