[package]
name = "phira-mp-client"
version = "0.1.0"
edition.workspace = true

[lib]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
dashmap = "6.1.0"
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

phira-mp-common = { path = "../phira-mp-common" }
