[package]
name = "phira-mp-common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
byteorder = "1.4.3"
half = "~2.2.1"
tap = "1.0.1"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "rt", "net", "io-util", "time", "sync"] }
tracing = "0.1.37"

phira-mp-macros = { path = "../phira-mp-macros" }
uuid = { version = "1.3.3", features = ["v4"] }
chrono = "0.4.26"
