[package]
name = "phira-mp-common"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
byteorder = "1.5.0"
chrono = { workspace = true }
half = "2.7.1"
tap = "1.0.1"
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

phira-mp-macros = { path = "../phira-mp-macros" }
