[package]
name = "phira-mp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
phira-mp-common = { path = "../phira-mp-common" }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
tap = "1.0.1"
tokio = "*"
tracing = "0.1.37"
uuid = { version = "1.3.3", features = ["v4"] }

tracing-appender = "0.2.2"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rand = "0.8.5"
fluent = "0.16.0"
fluent-syntax = "0.11.0"
lru = "0.10.0"
once_cell = "1.18.0"
unic-langid = { version = "0.9.1", features = ["macros"] }
intl-memoizer = "0.5.1"
